2011-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItemCell.m: Make key equivalent modifier string
	user adjustable by getting them from the defaults.
	* Documentation/GuiUser/DefaultsSummary.gsdoc: Document the new
	equivalent modifier strings and remove the now obsolete
	documentation for GSFileBrowserHideDotFiles.

2011-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSavePanel.m (-_initWithoutGModel): Use an image view
	instead of a button to display the application icon. That way
	icons get scaled correctly.
	Patch by Philippe Roussel <p.o.roussel@free.fr>.

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Resources/GNUmakefile
	(gui-resources_RESOURCE_FILES_INSTALL_DIR): Removed.
	* Source/GNUmakefile
	(libgui-resources_RESOURCE_FILES_INSTALL_DIR): Removed.

2011-03-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSLayoutManager.m: Don't draw spelling underlines
	when printing

2011-03-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m: Attempt to add pagination support
	so lines aren't cut in half when printing

2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m: Tweaks to last commit

2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSLayoutManager.m: Clear temporary attributes
	on the modified range when informed of a change in the text
	storage
	* Source/NSTextView.m: Add a context menu with spelling
	suggestions and cut/copy/paste

2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSSavePanel.m:
	* Headers/AppKit/NSSavePanel.h: Implement -showsHiddenFiles
	and -setShowsHiddenFiles:. Add a context menu to the browser
	to allow toggling this setting.

	NOTE: It defaults to not showing hidden files, and no longer
	uses the GSFileBrowserHideDotFiles user default.

2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrintPanel.m:
	* Printing/GSCUPS/GSCUPSPrintOperation.m:
	* Printing/GSLPR/GSLPRPrintOperation.m: Allow saving a print