@@ -1,3 +1,8 @@
+2011-03-14  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/NSTextView.m: Add a message in the context menu
+	if there are no spelling suggestions
+	
 2011-03-14  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSMenuItemCell.m: Make key equivalent modifier string
